--- a/public/styles.css
+++ b/public/styles.css
@@ -100,14 +100,14 @@ h4, h5, h6 {
 
 a,
 h3.article-title a:hover {
-  color: hsl(339, 90%, 68%);
+  color: #795548;
   text-decoration: none;
   transition: color 0.6s ease;
 }
 
 a:hover,
 a:focus {
-  color: hsl(339, 90%, 68%);
+  color: #795548;
 }
 
 img,
@@ -243,7 +243,7 @@ small,
 }
 
 .home-section {
-  background-color: hsla(231, 15%, 18%, 1);
+  background-color: hsla(16, 24%, 85%, 1);
   padding: 110px 0 110px 0;
   animation: intro 0.3s both;
   animation-delay: 0.15s;
@@ -254,7 +254,7 @@ small,
 }
 
 .home-section:nth-of-type(even) {
-  background-color: hsla(231, 15%, 17%, 1);
+  background-color: hsla(16, 24%, 80%, 1);
 }
 
 @media screen and (max-width: 768px) {
@@ -529,7 +529,7 @@ article {
 }
 
 .article-metadata a:hover {
-  color: hsl(339, 90%, 68%);
+  color: #795548;
 }
 
 .article-list-item {
@@ -863,8 +863,8 @@ footer a#back_to_top i {
  **************************************************/
 
 .btn-primary {
-  border-color: hsl(339, 90%, 68%) !important;
-  background: hsl(339, 90%, 68%) !important;
+  border-color: #795548 !important;
+  background: #795548 !important;
 }
 
 .btn-primary:hover,
@@ -872,7 +872,7 @@ footer a#back_to_top i {
 .btn-primary.active,
 .btn-primary:visited,
 .open > .dropdown-toggle.btn-primary {
-  background: hsl(339, 90%, 68%) !important;
+  background: #795548 !important;
 }
 
 .btn-light {
@@ -906,12 +906,12 @@ footer a#back_to_top i {
 
 .btn-toolbar .btn.btn-primary:hover,
 .btn-toolbar .btn.btn-primary:focus {
-  background-color: hsl(339, 90%, 58%) !important;
+  background-color: #4b2c20 !important;
 }
 
 .btn-toolbar .btn.btn-primary:active,
 .btn-toolbar .btn.btn-primary.active {
-  background-color: hsl(339, 90%, 78%) !important;
+  background-color: #a98274 !important;
 }
 
 /*************************************************
@@ -925,12 +925,12 @@ footer a#back_to_top i {
 }
 
 .btn-primary.btn-outline {
-  color: hsl(339, 90%, 68%) !important;
-  border-color: hsl(339, 90%, 68%) !important;
+  color: #795548 !important;
+  border-color: #795548 !important;
 }
 
 .btn-primary.btn-outline:focus {
-  color: hsl(339, 90%, 68%) !important;
+  color: #795548 !important;
 }
 
 .btn-primary.btn-outline:active {
@@ -984,7 +984,7 @@ footer a#back_to_top i {
 }
 
 .navbar-default {
-  background: rgb(20, 22, 34);
+  background: #795548;
   box-shadow: 0 0.125rem 0.25rem 0 rgba(0,0,0,.11)
 }
 
@@ -1046,7 +1046,7 @@ nav#navbar-main li {
 }
 
 .dropdown-menu {
-  background-color: rgb(20, 22, 34) !important;
+  background-color: #795548 !important;
 }
 
 .dropdown-menu > li > a {
@@ -1063,13 +1063,13 @@ nav#navbar-main li {
 .dropdown-menu>li>a:hover {
   color: rgba(255,255,255,1);
   text-decoration: none;
-  background-color: rgb(20, 22, 34);
+  background-color: #795548;
 }
 
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:focus,
 .dropdown-menu > .active > a:hover {
-  color: rgb(20, 22, 34);
+  color: #795548;
   text-decoration: none;
   background-color: rgba(255,255,255,1);
   outline: 0;
@@ -1080,7 +1080,7 @@ nav#navbar-main li {
 .navbar-default .navbar-nav>.open>a:hover,
 .navbar-default .navbar-nav>.open>a:visited {
   color: rgba(255,255,255,0.6) !important;
-  background-color: rgb(20, 22, 34) !important;
+  background-color: #795548 !important;
 }
 
 .navbar-default .navbar-brand {
@@ -1342,7 +1342,7 @@ body.dark {
 }
 
 .dark ul.share li a {
-  background-color: hsl(339, 90%, 68%);
+  background-color: #795548;
 }
 
 .dark table table {
@@ -1396,7 +1396,7 @@ body.dark {
 }
 
 .dark .card h4 a {
-  color: hsl(339, 90%, 68%);
+  color: #795548;
   border-bottom: solid 1px transparent;
 }
 
