--- a/public/styles.css
+++ b/public/styles.css
@@ -100,14 +100,14 @@ h4, h5, h6 {
 
 a,
 h3.article-title a:hover {
-  color: #795548;
+  color: #3f51b5;
   text-decoration: none;
   transition: color 0.6s ease;
 }
 
 a:hover,
 a:focus {
-  color: #795548;
+  color: #3f51b5;
 }
 
 img,
@@ -243,7 +243,7 @@ small,
 }
 
 .home-section {
-  background-color: hsla(16, 24%, 85%, 1);
+  background-color: rgb(255, 255, 255);
   padding: 110px 0 110px 0;
   animation: intro 0.3s both;
   animation-delay: 0.15s;
@@ -254,7 +254,7 @@ small,
 }
 
 .home-section:nth-of-type(even) {
-  background-color: hsla(16, 24%, 80%, 1);
+  background-color: rgb(247, 247, 247);
 }
 
 @media screen and (max-width: 768px) {
@@ -529,7 +529,7 @@ article {
 }
 
 .article-metadata a:hover {
-  color: #795548;
+  color: #3f51b5;
 }
 
 .article-list-item {
@@ -863,8 +863,8 @@ footer a#back_to_top i {
  **************************************************/
 
 .btn-primary {
-  border-color: #795548 !important;
-  background: #795548 !important;
+  border-color: #3f51b5 !important;
+  background: #3f51b5 !important;
 }
 
 .btn-primary:hover,
@@ -872,7 +872,7 @@ footer a#back_to_top i {
 .btn-primary.active,
 .btn-primary:visited,
 .open > .dropdown-toggle.btn-primary {
-  background: #795548 !important;
+  background: #3f51b5 !important;
 }
 
 .btn-light {
@@ -906,12 +906,12 @@ footer a#back_to_top i {
 
 .btn-toolbar .btn.btn-primary:hover,
 .btn-toolbar .btn.btn-primary:focus {
-  background-color: #4b2c20 !important;
+  background-color: #002984 !important;
 }
 
 .btn-toolbar .btn.btn-primary:active,
 .btn-toolbar .btn.btn-primary.active {
-  background-color: #a98274 !important;
+  background-color: #757de8 !important;
 }
 
 /*************************************************
@@ -925,12 +925,12 @@ footer a#back_to_top i {
 }
 
 .btn-primary.btn-outline {
-  color: #795548 !important;
-  border-color: #795548 !important;
+  color: #3f51b5 !important;
+  border-color: #3f51b5 !important;
 }
 
 .btn-primary.btn-outline:focus {
-  color: #795548 !important;
+  color: #3f51b5 !important;
 }
 
 .btn-primary.btn-outline:active {
@@ -984,7 +984,7 @@ footer a#back_to_top i {
 }
 
 .navbar-default {
-  background: #795548;
+  background: #3f51b5;
   box-shadow: 0 0.125rem 0.25rem 0 rgba(0,0,0,.11)
 }
 
@@ -1007,24 +1007,24 @@ nav#navbar-main li {
   white-space: nowrap;
   -webkit-transition: 0.2s ease;
   transition: 0.2s ease;
-  color: rgba(255,255,255,0.6);
+  color: #fff;
   font-weight: 600;
 }
 
 .navbar-default .navbar-nav>li>a:focus {
-  color: rgba(255,255,255,0.6);
+  color: #fff;
   background-color: transparent;
 }
 
 .navbar-default .navbar-nav>li>a:hover {
-  color: rgba(255,255,255,1);
+  color: #8c9eff;
   background-color: transparent;
 }
 
 .navbar-default .navbar-nav>.active>a,
 .navbar-default .navbar-nav>.active>a:focus,
 .navbar-default .navbar-nav>.active>a:hover {
-  color: rgba(255,255,255,1);
+  color: #8c9eff;
   font-weight: 700;
   background-color: transparent !important; /* Override Bootstrap. */
 }
@@ -1042,11 +1042,11 @@ nav#navbar-main li {
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: rgba(255,255,255,0.6) !important;
+  background-color: #fff !important;
 }
 
 .dropdown-menu {
-  background-color: #795548 !important;
+  background-color: #3f51b5 !important;
 }
 
 .dropdown-menu > li > a {
@@ -1055,23 +1055,23 @@ nav#navbar-main li {
   clear: both;
   font-weight: 400;
   line-height: 1.42857143;
-  color: rgba(255,255,255,0.6);
+  color: #fff;
   white-space: nowrap;
 }
 
 .dropdown-menu>li>a:focus,
 .dropdown-menu>li>a:hover {
-  color: rgba(255,255,255,1);
+  color: #8c9eff;
   text-decoration: none;
-  background-color: #795548;
+  background-color: #3f51b5;
 }
 
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:focus,
 .dropdown-menu > .active > a:hover {
-  color: #795548;
+  color: #3f51b5;
   text-decoration: none;
-  background-color: rgba(255,255,255,1);
+  background-color: #8c9eff;
   outline: 0;
 }
 
@@ -1079,8 +1079,8 @@ nav#navbar-main li {
 .navbar-default .navbar-nav>.open>a:focus,
 .navbar-default .navbar-nav>.open>a:hover,
 .navbar-default .navbar-nav>.open>a:visited {
-  color: rgba(255,255,255,0.6) !important;
-  background-color: #795548 !important;
+  color: #fff !important;
+  background-color: #3f51b5 !important;
 }
 
 .navbar-default .navbar-brand {
@@ -1157,7 +1157,7 @@ nav#navbar-main li {
     clear: both;
     font-weight: 400;
     line-height: 1.42857143;
-    color: rgba(255,255,255,0.6);
+    color: #fff;
     white-space: nowrap;
   }
 
@@ -1174,7 +1174,7 @@ nav#navbar-main li {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
     padding: 5px 15px 5px 25px;
     line-height: 20px;
-    color: rgba(255,255,255,0.6);
+    color: #fff;
   }
 
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus,
@@ -1186,7 +1186,7 @@ nav#navbar-main li {
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus,
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover {
-    color: rgba(255,255,255,1);
+    color: #8c9eff;
     background-color: transparent;
   }
 
@@ -1342,7 +1342,7 @@ body.dark {
 }
 
 .dark ul.share li a {
-  background-color: #795548;
+  background-color: #3f51b5;
 }
 
 .dark table table {
@@ -1396,7 +1396,7 @@ body.dark {
 }
 
 .dark .card h4 a {
-  color: #795548;
+  color: #3f51b5;
   border-bottom: solid 1px transparent;
 }
 
